<resources>
    <string name="app_name">HelloInnoCV</string>
    <string name="error_conection">Error de conexion</string>
    <string name="error_ocurred">Ocurrió un error inesperado.</string>
    <string name="title_activity_test">test</string>
    <string name="menu_search">Realizar Busqueda</string>
    <string name="search_hint">Busqueda de usuarios...</string>
    <string name="contact">contact</string>
    <string name="action_selecall">Seleccionar Todos</string>
    <string name="hint_name">Introduzca su nombre</string>
    <string name="hint_birth_date">Introduzca su Fecha de Nacimiento</string>
    <string name="btn_save">GUARDAR</string>
    <string name="delete_user">Eliminar Usuario</string>
    <string name="undo_changes">Deshacer Cambios</string>
    <string name="element_must_be_selected">No se seleccionó ningun elemento</string>
    <string name="end_point">http://hello-world.innocv.com/api/</string>
    <string name="loading">Cargando...</string>
    <string name="user_added">Usuario Añadido</string>
    <string name="user_updated">Usuario Actualizado</string>
    <string name="ask_delete">¿Desea Eliminar este Usuario?</string>
    <string name="action_cant_undo">Esta acción no se puede deshacer</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="user_deleted">Usuario Eliminado</string>
</resources>
