<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/delete_item"
        android:title="@string/delete_user"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"
        appcompat:showAsAction="ifRoom"/>
    <item
        android:id="@+id/undo_item"
        android:title="@string/undo_changes"
        android:icon="@drawable/ic_undo_white_24dp"
        android:visible="false"
        appcompat:showAsAction="ifRoom"/>

</menu>